--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="teststyle.css">
     <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Home</title>
 </head>
 <style>
@@ -37,48 +38,34 @@ body{
                 <div class="nav-links">
                     <ul>
                         <li class="nav-link" style="--i: .6s">
-                            <a href="index.html">Home</a>
-                            <div class="dropdown">
-                                <ul>
-                                    <li class="dropdown-link">
-                                        <a href="settings.html">Settings</a>
-                                    </li>
-                                    <li class="dropdown-link">
-                                        <a href="leaderboard.html">Leaderboard</a>
-                                    </li>
-                                    <div class="arrow"></div>
-                                </ul>
-                            </div>
+                            <a href="home.html">HOME<i class="fas fa-caret-down"></i></a>
                         </li>
                         <li class="nav-link" style="--i: .85s">
-                            <a href="message.html">SWEET TEA<i class="fas fa-caret-down"></i></a>
+                            <a href="message.html">WHATS THE TEA SIS?<i class="fas fa-caret-down"></i></a>
                         
                         </li>
                         <li class="nav-link" style="--i: 1.1s">
-                            <a href="#">SWEETVENTURE<i class="fas fa-caret-down"></i></a>
+                            <a href="#">SWEET-VENTURE<i class="fas fa-caret-down"></i></a>
                             <div class="dropdown">
                                 <ul>
                                     <li class="dropdown-link">
                                         <a href="np_challenge.html">TEAM NGEE ANN</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#">TEAM SP</a>
-                                    </li>
-                                    <li class="dropdown-link">
-                                        <a href="#">TEAM BUKIT PANJANG</a>
+                                        <a href="bp_challenge.html">TEAM BUKIT PANJANG</a>
                                     </li>
                                     <div class="arrow"></div>
                                 </ul>
                             </div>
                         </li>
                         <li class="nav-link" style="--i: 1.35s">
-                            <a href="scoreboard.html">LEADER-BOARD<i class="fas fa-caret-down"></i></a>
+                            <a href="scoreboard.html">LEADERBOARD<i class="fas fa-caret-down"></i></a>
                         </li>
                     </ul>
                 </div>
   
                 <div class="log-sign" style="--i: 1.6s">
-                    <a href="login.html" class="btn transparent">Log in</a>
+                    <a href="index.html" class="btn transparent">Log in</a>
                 </div>
             </div>
 
