--- a/message.html
+++ b/message.html
@@ -49,53 +49,39 @@
           </div>
 
           <div class="nav-btn">
-              <div class="nav-links">
-                  <ul>
-                      <li class="nav-link" style="--i: .6s">
-                          <a href="index.html">Home</a>
-                          <div class="dropdown">
-                              <ul>
-                                  <li class="dropdown-link">
-                                      <a href="settings.html">Settings</a>
-                                  </li>
-                                  <li class="dropdown-link">
-                                      <a href="leaderboard.html">Leaderboard</a>
-                                  </li>
-                                  <div class="arrow"></div>
-                              </ul>
-                          </div>
-                      </li>
-                      <li class="nav-link" style="--i: .85s">
-                          <a href="message.html">SWEET TEA<i class="fas fa-caret-down"></i></a>
-                      
-                      </li>
-                      <li class="nav-link" style="--i: 1.1s">
-                          <a href="#">SWEETVENTURE<i class="fas fa-caret-down"></i></a>
-                          <div class="dropdown">
-                              <ul>
-                                  <li class="dropdown-link">
-                                      <a href="np_challenge.html">TEAM NGEE ANN</a>
-                                  </li>
-                                  <li class="dropdown-link">
-                                      <a href="#">TEAM SP</a>
-                                  </li>
-                                  <li class="dropdown-link">
-                                      <a href="#">TEAM BUKIT PANJANG</a>
-                                  </li>
-                                  <div class="arrow"></div>
-                              </ul>
-                          </div>
-                      </li>
-                      <li class="nav-link" style="--i: 1.35s">
-                          <a href="scoreboard.html">LEADER-BOARD<i class="fas fa-caret-down"></i></a>
-                      </li>
-                  </ul>
-              </div>
+            <div class="nav-links">
+                <ul>
+                    <li class="nav-link" style="--i: .6s">
+                        <a href="home.html">HOME<i class="fas fa-caret-down"></i></a>
+                    </li>
+                    <li class="nav-link" style="--i: .85s">
+                        <a href="message.html">WHATS THE TEA SIS?<i class="fas fa-caret-down"></i></a>
+                    
+                    </li>
+                    <li class="nav-link" style="--i: 1.1s">
+                        <a href="#">SWEET-VENTURE<i class="fas fa-caret-down"></i></a>
+                        <div class="dropdown">
+                            <ul>
+                                <li class="dropdown-link">
+                                    <a href="np_challenge.html">TEAM NGEE ANN</a>
+                                </li>
+                                <li class="dropdown-link">
+                                    <a href="bp_challenge.html">TEAM BUKIT PANJANG</a>
+                                </li>
+                                <div class="arrow"></div>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="nav-link" style="--i: 1.35s">
+                        <a href="scoreboard.html">LEADERBOARD<i class="fas fa-caret-down"></i></a>
+                    </li>
+                </ul>
+            </div>
 
-              <div class="log-sign" style="--i: 1.6s">
-                  <a href="login.html" class="btn transparent">Log in</a>
-              </div>
-          </div>
+            <div class="log-sign" style="--i: 1.6s">
+                <a href="index.html" class="btn transparent">Log in</a>
+            </div>
+        </div>
 
           <div class="hamburger-menu-container">
               <div class="hamburger-menu">
