--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="teststyle.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Home</title>
@@ -41,22 +41,27 @@ body{
                             <a href="home.html">HOME<i class="fas fa-caret-down"></i></a>
                         </li>
                         <li class="nav-link" style="--i: .85s">
+                          <a href="#">SWEET-SPOTS<i class="fas fa-caret-down"></i></a>
+                          <div class="dropdown">
+                            <ul>
+                                <li class="dropdown-link">
+                                    <a href="restaurant.html">RESTAURANTS</a>
+                                </li>
+                                <li class="dropdown-link">
+                                  <a href="atm.html">ATMS</a>
+                              </li>
+                              <li class="dropdown-link">
+                                <a href="cafe.html">CAFES</a>
+                            </li>
+                                <div class="arrow"></div>
+                            </ul>
+                        </div>
+                      </li>
+                        <li class="nav-link" style="--i: .85s">
                             <a href="message.html">WHATS THE TEA SIS?<i class="fas fa-caret-down"></i></a>
-                        
                         </li>
                         <li class="nav-link" style="--i: 1.1s">
-                            <a href="#">SWEET-VENTURE<i class="fas fa-caret-down"></i></a>
-                            <div class="dropdown">
-                                <ul>
-                                    <li class="dropdown-link">
-                                        <a href="np_challenge.html">TEAM NGEE ANN</a>
-                                    </li>
-                                    <li class="dropdown-link">
-                                        <a href="bp_challenge.html">TEAM BUKIT PANJANG</a>
-                                    </li>
-                                    <div class="arrow"></div>
-                                </ul>
-                            </div>
+                            <a href="np_challenge.html">SWEET-VENTURE<i class="fas fa-caret-down"></i></a>
                         </li>
                         <li class="nav-link" style="--i: 1.35s">
                             <a href="scoreboard.html">LEADERBOARD<i class="fas fa-caret-down"></i></a>
