--- a/scoreboard.html
+++ b/scoreboard.html
@@ -11,9 +11,13 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" 
   integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
   crossorigin="anonymous">
- <link rel="stylesheet" href="teststyle.css">
+ <link rel="stylesheet" href="style.css">
  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
   <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
 
   <style> 
@@ -39,22 +43,27 @@
                         <a href="home.html">HOME<i class="fas fa-caret-down"></i></a>
                     </li>
                     <li class="nav-link" style="--i: .85s">
+                      <a href="#">SWEET-SPOTS<i class="fas fa-caret-down"></i></a>
+                      <div class="dropdown">
+                        <ul>
+                            <li class="dropdown-link">
+                                <a href="restaurant.html">RESTAURANTS</a>
+                            </li>
+                            <li class="dropdown-link">
+                              <a href="atm.html">ATMS</a>
+                          </li>
+                          <li class="dropdown-link">
+                            <a href="cafe.html">CAFES</a>
+                        </li>
+                            <div class="arrow"></div>
+                        </ul>
+                    </div>
+                  </li>
+                    <li class="nav-link" style="--i: .85s">
                         <a href="message.html">WHATS THE TEA SIS?<i class="fas fa-caret-down"></i></a>
-                    
                     </li>
                     <li class="nav-link" style="--i: 1.1s">
-                        <a href="#">SWEET-VENTURE<i class="fas fa-caret-down"></i></a>
-                        <div class="dropdown">
-                            <ul>
-                                <li class="dropdown-link">
-                                    <a href="np_challenge.html">TEAM NGEE ANN</a>
-                                </li>
-                                <li class="dropdown-link">
-                                    <a href="bp_challenge.html">TEAM BUKIT PANJANG</a>
-                                </li>
-                                <div class="arrow"></div>
-                            </ul>
-                        </div>
+                        <a href="np_challenge.html">SWEET-VENTURE<i class="fas fa-caret-down"></i></a>
                     </li>
                     <li class="nav-link" style="--i: 1.35s">
                         <a href="scoreboard.html">LEADERBOARD<i class="fas fa-caret-down"></i></a>
@@ -74,7 +83,7 @@
           </div>
       </div>
   </header>
-  <main>         
+  <main class="animate__animated animate__bounceInUp">         
     <table class="table table-hover">
       <thead>
         <tr class="titles">
