--- a/html/forgot.html
+++ b/html/forgot.html
@@ -28,7 +28,7 @@
             <i class="fas fa-lock"></i>
             <input id="confirm-password" type="password" placeholder="Confirm New Password" />
           </div>
-          <a href="index.html"><input id="back" type="submit" value="Home" class="btn solid" />
+          <a href="/index.html"><input id="back" type="submit" value="Home" class="btn solid" />
           </a> 
           <div id="error"></div>
         </form>
@@ -53,7 +53,7 @@
         if (localStorage.getItem("newPassword") === localStorage.getItem("confirm")){
             console.log("true");
             resets();
-            window.location.href="index.html";
+            window.location.href="/index.html";
         }
         else {
             console.log("false");
